--- a/Assignment4/Lab_Recurrent_4.ipynb
+++ b/Assignment4/Lab_Recurrent_4.ipynb
@@ -480,11 +480,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69b77130",
+   "metadata": {},
+   "source": [
+    "# Sself-implemented LSTM cells\n",
+    "\n",
+    "## LSTM - Cell"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "420430c4-617e-44db-a5d1-9af2636b4134",
+   "execution_count": null,
+   "id": "002cf8ac",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class OurLSTMCell(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size):\n",
+    "        super(OurLSTMCell, self).__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "\n",
+    "        # Input gate\n",
+    "        self.W_ii = nn.Parameter(torch.Tensor(hidden_size, input_size))\n",
+    "        self.W_hi = nn.Parameter(torch.Tensor(hidden_size, hidden_size))\n",
+    "        self.b_ii = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "        self.b_hi = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "\n",
+    "        # Forget gate\n",
+    "        self.W_if = nn.Parameter(torch.Tensor(hidden_size, input_size))\n",
+    "        self.W_hf = nn.Parameter(torch.Tensor(hidden_size, hidden_size))\n",
+    "        self.b_if = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "        self.b_hf = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "\n",
+    "        # Cell gate\n",
+    "        self.W_ig = nn.Parameter(torch.Tensor(hidden_size, input_size))\n",
+    "        self.W_hg = nn.Parameter(torch.Tensor(hidden_size, hidden_size))\n",
+    "        self.b_ig = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "        self.b_hg = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "\n",
+    "        # Output gate\n",
+    "        self.W_io = nn.Parameter(torch.Tensor(hidden_size, input_size))\n",
+    "        self.W_ho = nn.Parameter(torch.Tensor(hidden_size, hidden_size))\n",
+    "        self.b_io = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "        self.b_ho = nn.Parameter(torch.Tensor(hidden_size))\n",
+    "\n",
+    "        self.init_weights()\n",
+    "    \n",
+    "    def init_weights(self):\n",
+    "        for p in self.parameters():\n",
+    "            # dimension greater equal to 2 is typically associated with weight tensors\n",
+    "            if p.data.ndimension() >= 2:\n",
+    "                nn.init.xavier_uniform_(p.data)\n",
+    "            else:\n",
+    "            # bias tensors are commonly initialized to 0\n",
+    "                nn.init.zeros_(p.data)\n",
+    "    \n",
+    "    \n",
+    "    def forward(self, x, init_states=None):\n",
+    "        # bs, _ = x.size()\n",
+    "\n",
+    "        # Access prior hidden state if existent, else initialize to zero (i.e. future is unknown)\n",
+    "        h_t, c_t = (torch.zeros(self.hidden_size).to(x.device),\n",
+    "                    torch.zeros(self.hidden_size).to(x.device)) if init_states is None else init_states\n",
+    "\n",
+    "        # We note: In a perfect world, this should be parallelized\n",
+    "        # Input gate\n",
+    "        i_t = torch.sigmoid(x @ self.W_ii.t() + self.b_ii + h_t @ self.W_hi.t() + self.b_hi)\n",
+    "        \n",
+    "        # Forget gate\n",
+    "        f_t = torch.sigmoid(x @ self.W_if.t() + self.b_if + h_t @ self.W_hf.t() + self.b_hf)\n",
+    "        \n",
+    "        # Cell gate\n",
+    "        g_t = torch.tanh(x @ self.W_ig.t() + self.b_ig + h_t @ self.W_hg.t() + self.b_hg)\n",
+    "        \n",
+    "        # Output gate\n",
+    "        o_t = torch.sigmoid(x @ self.W_io.t() + self.b_io + h_t @ self.W_ho.t() + self.b_ho)\n",
+    "        \n",
+    "        # Note: * is the Hadamard product\n",
+    "        # Update cell state\n",
+    "        c_t = f_t * c_t + i_t * g_t\n",
+    "\n",
+    "        # Update hidden state\n",
+    "        h_t = o_t * torch.tanh(c_t)\n",
+    "\n",
+    "        return h_t, c_t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a8442d",
+   "metadata": {},
+   "source": [
+    "## ConvLSTM cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75d9323f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvLSTMCell(nn.Module):\n",
+    "    def __init__(self, channels, input_size, kernel_size = 3):\n",
+    "        '''\n",
+    "        Params:\n",
+    "\n",
+    "        channels: number of channels, which is used as input and output\n",
+    "        input_size: The input size of the image\n",
+    "        kernel_size: size of the convolutional kernel\n",
+    "        '''\n",
+    "        super(ConvLSTMCell, self).__init__()\n",
+    "\n",
+    "        self.input_size = input_size\n",
+    "        self.kernel_size = kernel_size\n",
+    "\n",
+    "        # Input gate\n",
+    "        self.W_ii = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.W_hi = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.b_i = nn.Parameter(torch.zeros(channels, input_size, input_size))\n",
+    "\n",
+    "        # Forget gate\n",
+    "        self.W_if = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.W_hf = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.b_f = nn.Parameter(torch.zeros(channels, input_size, input_size))\n",
+    "\n",
+    "        # Cell gate\n",
+    "        self.W_ig = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.W_hg = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.b_g = nn.Parameter(torch.zeros(channels, input_size, input_size))\n",
+    "\n",
+    "        # Output gate\n",
+    "        self.W_io = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.W_ho = nn.Conv2d(in_channels=channels, out_channels=channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.b_o = nn.Parameter(torch.zeros(channels, input_size, input_size))\n",
+    "\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    # Same as above\n",
+    "    def init_weights(self):\n",
+    "        for p in self.parameters():\n",
+    "            if p.data.ndimension() >= 2:\n",
+    "                nn.init.xavier_uniform_(p.data)\n",
+    "            else:\n",
+    "                nn.init.zeros_(p.data)\n",
+    "\n",
+    "    def forward(self, x, init_states=None):\n",
+    "        bs, channels, rows, cols = x.size()\n",
+    "\n",
+    "        h_t, c_t = (torch.zeros(self.input_size).to(x.device),\n",
+    "                    torch.zeros(self.input_size)) if init_states is None else init_states\n",
+    "\n",
+    "        \n",
+    "        # Input gate\n",
+    "        i_t = torch.sigmoid(self.W_ii(x) + self.b_i + self.W_hi(h_t))\n",
+    "        \n",
+    "        # Forget gate\n",
+    "        f_t = torch.sigmoid(self.W_if(x) + self.W_hf(h_t) + self.b_f)\n",
+    "        \n",
+    "        # Cell gate\n",
+    "        g_t = torch.tanh(self.W_ig(x) + self.b_g + self.W_hg(h_t))\n",
+    "        \n",
+    "        # Output gate\n",
+    "        o_t = torch.sigmoid(self.W_io(x) + self.b_o + self.W_ho(h_t))\n",
+    "        \n",
+    "        # Update cell state\n",
+    "        c_t = f_t * c_t + i_t * g_t\n",
+    "\n",
+    "        # Update hidden state\n",
+    "        h_t = o_t * torch.tanh(c_t)\n",
+    "\n",
+    "        return h_t, c_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "420430c4-617e-44db-a5d1-9af2636b4134",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConvBlock\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    Encapuslation of a convolutional block (conv + activation + pooling)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, in_ch, out_ch, k_size, pool\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, dropout_prob \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m, mxpool_stride\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class ConvBlock(nn.Module):\n",
     "    \"\"\"\n",
@@ -558,6 +746,14 @@
     "                grus.append(nn.GRUCell(input_size=in_size, hidden_size=self.hidden_dim))\n",
     "            self.gru = nn.ModuleList(grus)\n",
     "            self.recurrent_module = self._GRUforward\n",
+    "        elif recurrent_module == \"our_lstm\":\n",
+    "            # LSTM model  \n",
+    "            lstms = []\n",
+    "            for i in range(num_layers):\n",
+    "                in_size = 4096 if i == 0 else self.hidden_dim\n",
+    "                lstms.append(OurLSTMCell(input_size=in_size, hidden_size=self.hidden_dim))\n",
+    "            self.lstm = nn.ModuleList(lstms)\n",
+    "            self.recurrent_module = self._OurLSTMforward\n",
     "            \n",
     "        \n",
     "        \n",
@@ -567,6 +763,22 @@
     "        self.classifier = nn.Sequential(\n",
     "            nn.Linear(hidden_size, num_classes)\n",
     "        )\n",
+    "    \n",
+    "    def _OurLSTMforward(self, embeddings, b_size):\n",
+    "        h, c = self.lstm_init_state(b_size=b_size, device=device)\n",
+    "        lstm_out = []\n",
+    "        for i in range(embeddings.shape[1]):\n",
+    "            lstm_input = embeddings[:, i, :]\n",
+    "            # iterating over LSTM Cells\n",
+    "            for j, lstm_cell in enumerate(self.lstm):\n",
+    "                h[j], c[j] = lstm_cell(lstm_input, init_states = (h[j], c[j]))\n",
+    "                lstm_input = h[j]\n",
+    "            lstm_out.append(lstm_input)\n",
+    "        lstm_out = torch.stack(lstm_out, dim=1)\n",
+    "        # Take the output from the last time step\n",
+    "        out = lstm_out[:, -1, :]\n",
+    "        return out\n",
+    "    \n",
     "    def _LSTMforward(self, embeddings, b_size):\n",
     "        h, c = self.lstm_init_state(b_size=b_size, device=device)\n",
     "        lstm_out = []\n",
@@ -636,18 +848,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d451a91",
+   "metadata": {},
+   "source": [
+    "## Recurrent Network with ConvLSTM\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "id": "51af54f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvLSTMRecurrentClassifier(nn.Module):\n",
+    "    def __init__(self, input_channels, hidden_size, num_classes,num_layers = 10, mode=\"random\", recurrent_module=\"lstm\"):\n",
+    "        assert mode in [\"zeros\", \"random\"]\n",
+    "        super(ConvLSTMRecurrentClassifier, self).__init__()\n",
+    "        self.mode = mode\n",
+    "        self.num_layers = num_layers\n",
+    "        self.hidden_dim = hidden_size\n",
+    "        #Convolutional Encoder\n",
+    "        # self.conv_encoder = nn.Sequential(\n",
+    "        #     ConvBlock(3, 16, 3, pool=False),\n",
+    "        #     ConvBlock(16, 32, 3, pool=True),\n",
+    "        #     ConvBlock(32, 64, 3, pool=False),\n",
+    "        #     ConvBlock(64, 128, 3, pool=True)\n",
+    "        # )\n",
+    "        \n",
+    "        self.conv_encoder = nn.Sequential(\n",
+    "            # nn.Conv2d(input_channels, 64, kernel_size=3, padding=1),\n",
+    "            # nn.ReLU(inplace=True),\n",
+    "            # nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            # nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
+    "            # nn.ReLU(inplace=True),\n",
+    "            # nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            # Add more convolutional layers if needed\n",
+    "            ConvBlock(3, 16, 3, pool=False),\n",
+    "            ConvBlock(16, 32, 3, pool=True, mxpool_stride=2),\n",
+    "            ConvBlock(32, 64, 3, pool=False),\n",
+    "            ConvBlock(64, 128, 3, pool=True, mxpool_stride=2),\n",
+    "            # ConvBlock(128, 256, 3, pool=False),\n",
+    "            # ConvBlock(256, 512, 3, pool=True, mxpool_stride=2),\n",
+    "            # ConvBlock(512, 1024, 3, pool=False)\n",
+    "        )\n",
+    "\n",
+    "                \n",
+    "        self.num_layers = num_layers\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.lstms = []\n",
+    "        # ConvLSTM cells\n",
+    "        self.lstms.append(ConvLSTMCell(128, 16))\n",
+    "        for _ in range(num_layers - 1):\n",
+    "            self.lstms.append((ConvLSTMCell(128, hidden_size)))\n",
+    "        self.lstm = nn.ModuleList(self.lstms)\n",
+    "\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Linear(hidden_size*hidden_size*128, num_classes)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x: (batch_size, sequence_length, input_size)\n",
+    "        batch_size = x.shape[0]\n",
+    "        channels = x.shape[2]\n",
+    "        height = x.shape[3]\n",
+    "        width = x. shape[4]\n",
+    "        \n",
+    "        # Initial hidden and cell states\n",
+    "        h = [torch.zeros(channels, height, width).to(device) for _ in range(self.num_layers)]\n",
+    "        c = [torch.zeros(channels, height, width).to(device) for _ in range(self.num_layers)]\n",
+    "\n",
+    "        # Process each time step using ConvLSTM cells\n",
+    "\n",
+    "        for i in range(x.shape[1]):\n",
+    "            lstm_input = x[:, i, :, :]\n",
+    "            # iterating over ConvLSTM Cells\n",
+    "            for j, lstm_cell in enumerate(self.lstm):\n",
+    "                h[j], c[j] = lstm_cell(lstm_input, init_states =  (h[j], c[j]))\n",
+    "                lstm_input = h[j]\n",
+    "\n",
+    "        x = h[-1].reshape(batch_size, -1)\n",
+    "        # Fully connected layer for classification (using the output from the last time step)\n",
+    "\n",
+    "        out = self.classifier(out)\n",
+    "        \n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "f8773fdd-7f2b-4a97-b40d-4f16d5c4ce67",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
+     "ename": "NameError",
+     "evalue": "name 'sequencesExtractor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43msequencesExtractor\u001b[49m\u001b[38;5;241m.\u001b[39mget_classes()))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sequencesExtractor' is not defined"
      ]
     }
    ],
